Clean up comments, bump Lean version, drop Std dependency

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -4,10 +4,10 @@
  [{"url": "https://github.com/leanprover/std4",
    "type": "git",
    "subDir": null,
-   "rev": "ae9ae7f279421e45a9b87d67f2d28aaef299de5c",
+   "rev": "ff9850c4726f6b9fb8d8e96980c3fcb2900be8bd",
    "name": "std",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "v4.7.0-rc1",
    "inherited": false,
    "configFile": "lakefile.lean"}],
  "name": "bob",
